app-of-apps/apps/manual/otel/demo/base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-demo
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: OpenTelemetry demo application.
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Astronomy Shop
    gethomepage.dev/pod-selector: app.kubernetes.io/name=frontend-proxy
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-http-gateway
      namespace: istio-ingress
  hostnames: []
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - group: ''
          kind: Service
          name: frontend-proxy
          port: 8080
          weight: 1
